--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.html",
   "scripts": {
     "start": "http-server . -p 3000",
-    "deploy": "echo 'Ready for deployment!'"
+    "build": "echo 'Static site - no build needed'",
+    "deploy": "echo 'Ready for deployment!'",
+    "deploy:vercel": "vercel --prod",
+    "deploy:preview": "vercel"
   },
   "keywords": [
     "ecommerce",
